--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>Portofolio</title>
   </head>
   <body>
+  /*<audio hidden autoplay loop>
+    <source src="https://majelisainulyaqin.my.id/public/shalawat.mp3" type="audio/mpeg">
+  </audio>*/
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
