--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Portofolio</title>
   </head>
   <body>
-  /*<audio hidden autoplay loop>
+  <audio hidden autoplay loop>
     <source src="https://majelisainulyaqin.my.id/public/shalawat.mp3" type="audio/mpeg">
-  </audio>*/
+  </audio>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
