--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Majelis Ainul Yaqin</title>
   </head>
   <body>
+    <audio hidden autoplay loop>
+    <source src="https://feeldreams.github.io/djikhlas.mp3" type="audio/mpeg">
+    </audio>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
