--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <audio hidden autoplay loop>
-    <source src="https://ainulyaqin313.github.io/man-ana.mp3" type="audio/mpeg">
+    <source src="https://majelisainulyaqin.my.id/audio/man-ana.mp3" type="audio/mpeg">
     </audio>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
